# network_launcher

./: .gitattributes  .gitignore  LICENSE  README.md  RUN_APP.bat  START_HERE.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASING.md  TROUBLESHOOTING.md
scripts/: build_windows.ps1  entry.py  generate_icon.py  network_launcher.spec  run_dev.ps1
src/network_launcher/: __init__.py  __main__.py  config.py  docker_manager.py  gateway_proxy.py  gui.py  ngrok_bundle.py  process_utils.py  publish_profile.py  server_manager.py  spa_server.py  stats_collector.py  tunnel_manager.py  ui_components.py  ui_theme.py
tests/: manual_publish_smoke.py  test_gateway_proxy.py  test_gui_smoke.py  test_launch_diagnostics.py  test_process_visibility.py  test_profiles_and_docker.py  test_static_server.py  test_tunnel_manager.py
tests/fixtures/: ngrok_config_valid.yml
tests/fixtures/dev_project/: package.json
tests/fixtures/dev_project/src/: client.ts
tests/fixtures/preflight_project/src/: client.ts
tests/fixtures/static_project/: index.html
tests/fixtures/static_project/css/: style.css
